<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".module_auth.AuthActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="64dp"
        android:paddingBottom="16dp">

        <ImageView
            android:id="@+id/ivGoBack"
            android:layout_width="120dp"
            android:layout_height="56dp"
            android:scaleType="centerCrop"
            android:layout_marginStart="10dp"
            android:layout_gravity="start|center"
            android:src="@drawable/app_logo" />

    </FrameLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="16dp"
                android:text="@string/str_cms_control_center"
                android:fontFamily="@font/manrope_bold"
                android:textColor="@color/color_text_title"
                android:textSize="20sp"
                android:layout_gravity="center"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tiLoginType"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="16dp"
                android:hint="@string/str_login_type"
                android:focusable="false"
                app:boxCornerRadiusTopStart="0dp"
                app:boxCornerRadiusTopEnd="0dp"
                app:boxCornerRadiusBottomStart="0dp"
                app:boxCornerRadiusBottomEnd="0dp">

                <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                    android:id="@+id/atvLoginType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/redhat_medium"
                    android:focusable="false"
                    android:inputType="textEmailAddress"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tiEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="16dp"
                android:hint="@string/str_email"
                app:boxCornerRadiusTopStart="0dp"
                app:boxCornerRadiusTopEnd="0dp"
                app:boxCornerRadiusBottomStart="0dp"
                app:boxCornerRadiusBottomEnd="0dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/redhat_medium"
                    android:inputType="textEmailAddress"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tiPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="16dp"
                android:hint="@string/str_password"
                app:passwordToggleEnabled="true"
                app:boxCornerRadiusTopStart="0dp"
                app:boxCornerRadiusTopEnd="0dp"
                app:boxCornerRadiusBottomStart="0dp"
                app:boxCornerRadiusBottomEnd="0dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/redhat_medium"
                    android:inputType="textPassword"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:text="@string/str_login"
                android:textSize="16sp"
                app:cornerRadius="0dp"
                android:backgroundTint="@color/color_primary"
                android:fontFamily="@font/redhat_medium"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="24dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="46dp"
                android:fontFamily="@font/redhat_regular"
                android:text="Fablo CMS v1.0 &amp; Build 1009 (Alpha)"
                android:textColor="@color/color_text_version"
                android:textSize="12sp" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>